@@ -1,5 +1,7 @@
 Nutch Change Log
 
+* NUTCH-1090 InvertLinks should inform when ignoring internal links (Marek Backmann via markus)
+
 * NUTCH-1174 Outlinks are not properly normalized (markus)
 
 * NUTCH-1203 ParseSegment to show number of milliseconds per parse (markus)
